Add Big O Notes

--- a/BigO/index.html
+++ b/BigO/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Kelly Learns Algorithms and Data Structures</title>
-  <link rel="stylesheet" href="./css/styles.css">
+  <title>Understanding Big O</title>
+  <link rel="stylesheet" href="../css/styles.css">
 </head>
   <body>
     <div class='wrapper'>
@@ -11,6 +11,6 @@
         <h1>Keep Learning Kelly</h1>
       </header>
     </div>
-  <script src="./src/script.js"></script>
+  <script src="script.js"></script>
   </body>
 </html>
