complete recursion problem set

--- a/Recursion/index-PROBLEMS.html
+++ b/Recursion/index-PROBLEMS.html
@@ -8,9 +8,9 @@
   <body>
     <div class='wrapper'>
       <header>
-        <h1>Tackeling Recursion</h1>
+        <h1>Recursion Problem Set</h1>
       </header>
     </div>
-  <script src="script.js"></script>
+  <script src="script-two.js"></script>
   </body>
 </html>
