--- a/DataStructures/Singly-Linked-List/index.html
+++ b/DataStructures/Singly-Linked-List/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Find Embedded Word</title>
+  <title>Singly Linked List</title>
   <link>
 </head>
   <body>
